--- a/quasar-project/package.json
+++ b/quasar-project/package.json
@@ -2,7 +2,7 @@
   "name": "quasar-project",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "SensibiliTEA",
+  "productName": "PONTEA",
   "author": "Layse Araújo <lrsa@cin.ufpe.br>",
   "private": true,
   "scripts": {
